# omniparse

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  server.py
docs/: README.md  deployment.md  installation.md
examples/: OmniParse_GoogleColab.ipynb
omniparse/: __init__.py  demo.py  utils.py
omniparse/documents/: router.py
omniparse/image/: __init__.py  router.py
omniparse/media/: __init__.py
