[project]
name = "omniparse"
version = "0.0.2"
description = "API to convert Documents | Media | Webpage into Structured Markdown for LLM usecases"
authors = [
    {name = "Adithya S K", email = "adithyaskolavi@gmail.com"}
]
license = {file = "LICENSE"}
readme = "README.md"
keywords = ["pdf", "markdown", "ocr", "parse"]

requires-python = ">=3.10,<4.0"
dependencies = [
    "art>=6.5",
    "docling>=2.15.1",
    "einops>=0.8.1",
    "fastapi>=0.115.12",
    "gradio>=5.31.0",
    "html2text>=2025.4.15",
    "img2pdf>=0.6.1",
    "matplotlib>=3.10.3",
    "moviepy>=2.2.1",
    "nltk>=3.9.1",
    "openai-whisper>=20240930",
    "python-multipart>=0.0.20",
    "selenium>=4.33.0",
    "timm>=1.0.15",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers==4.50.3",
    "uvicorn>=0.34.2",
    "webdriver-manager>=4.0.2",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
